@@ -15,6 +15,5 @@
 #  limitations under the License.
 #
 
-
 JAVA_OPTS=""
-java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_Ujjwalbharti
+java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar --enable-preview dev.morling.onebrc.CalculateAverage_v2
